--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -6,8 +6,8 @@
       }
     },
     Macros: {
-      pd: ["{\frac{\partial #1}{\partial #2}}",2],
-      od: ["{\frac{d #1}{d #2}}",2]
+      pd: ["{\\frac{\\partial #1}{\\partial #2}}",2],
+      od: ["{\\frac{d #1}{d #2}}",2]
     },
     tex2jax: {
       inlineMath: [ ['$','$'], ['\(', '\)'] ],
