--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -23,3 +23,14 @@ a {
     }
   }
 }
+
+img[src*='#left'] { 
+    float: left;
+}
+img[src*='#right'] { 
+    float: right;
+}
+img[src*='#center'] { 
+    display: block; 
+    margin: auto; 
+}
